--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "electron ."
   },
   "author": "Javier Rizzo",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "font-awesome": "^4.7.0"
+  }
 }
